--- a/views/home.hbs
+++ b/views/home.hbs
@@ -26,7 +26,7 @@
       <td>{{this.phone}}</td>
       <td class="text-end">
           <a href="http://" type="button" class="btn btn-small"><i class="bi bi-eye"></i>View</a>
-          <a href="http://" type="button" class="btn btn-small"><i class="bi bi-pencil"></i>Edit</a>
+          <a href="/edituser/{{this.id}}" type="button" class="btn btn-small"><i class="bi bi-pencil"></i>Edit</a>
           <a href="http://" type="button" class="btn btn-small"><i class="bi bi-person-x"></i>Delete</a>
       </td>
     </tr>
