edit, view, delete 전부 마무리

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,11 @@
+
+{{#if removedUser}}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>User has been removed.</strong> 
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
+
 <div class="row">
     <div class="col-6"><h1>Users</h1></div>
     <div class="col-6 d-flex justify-content-end">
@@ -25,9 +33,9 @@
       <td>{{this.email}}</td>
       <td>{{this.phone}}</td>
       <td class="text-end">
-          <a href="http://" type="button" class="btn btn-small"><i class="bi bi-eye"></i>View</a>
+          <a href="/viewuser/{{this.id}}" type="button" class="btn btn-small"><i class="bi bi-eye"></i>View</a>
           <a href="/edituser/{{this.id}}" type="button" class="btn btn-small"><i class="bi bi-pencil"></i>Edit</a>
-          <a href="http://" type="button" class="btn btn-small"><i class="bi bi-person-x"></i>Delete</a>
+          <a href="/{{this.id}}" type="button" class="btn btn-small"><i class="bi bi-person-x"></i>Delete</a>
       </td>
     </tr>
     {{/each}}
